# RayTracing

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
inc/: APIminilibx.h  camera.h  cilinder.h  color.h  constants.h  cylinder.h  ee_list.h  light.h  miniRT.h  objects.h  parser.h  plane.h  sphere.h  vector3.h
include/: color.h  cylinder.h  ee_error.h  miniRT.h  objects.h  rt.h  scene_config.h  sphere.h  vector3.h  wrapper_graph_interface.h
include/common/: common.h
include/system/: window.h
libft/: Makefile  ee_error.c  ee_malloc.c  ft_atof.c  ft_split.c  get_next_line.h  libft.h
minilibx/: mlx_image.swiftdoc  mlx_image.swiftmodule  mlx_image.swiftsourceinfo  mlx_init.swiftsourceinfo  mlx_window.swiftdoc  mlx_window.swiftmodule  mlx_window.swiftsourceinfo
minilibx_LDarwin/: mlx.h  mlx_new_window.m
scene/: all_objects.rt  error.rt  scene.rt
src/: APIminilibx_one.c  camera.c  cilinder.c  color_func.c  color_func1.c  color_func2.c  create_target.c  cylinder.c  draw.c  ee_error.c  ee_list.c  events.c  ft_atof.c  get_func.c  light.c  main.c  objects.c  parser.c  parser_data.c  plane.c  print_info.c  scene_config.c  sphere.c  vector3.c  vector3_func1.c  vector3_func2.c  vector3_func3.c  wrapper_graph_interface.c
system/: CMakeLists.txt  main.c
